<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OptionsFragment"
    android:background="@drawable/pic3"
    >
<TextView
    android:id="@+id/tvProfile"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/select_or_deselect_questions"
    android:textSize="24sp"
    android:textColor="@color/white"
    android:textAlignment="center"
    android:layout_margin="10dp"
    />


    <TextView
        android:id="@+id/tvCategory1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/history"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:layout_margin="7dp"
        android:layout_below="@id/tvProfile"
        />
    <CheckBox
        android:id="@+id/cbCategory1"
        android:layout_toRightOf="@id/tvCategory1"
        android:layout_below="@id/tvProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:layout_marginLeft="50dp"
        android:checked="true"
        />
    <TextView
        android:id="@+id/tvCategory2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/science"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:layout_margin="7dp"
        android:layout_below="@id/tvCategory1"
        />
    <CheckBox
        android:id="@+id/cbCategory2"
        android:layout_toRightOf="@id/tvCategory1"
        android:layout_below="@id/tvCategory1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:checked="true"
        android:layout_marginLeft="50dp"
        />
    <TextView
        android:id="@+id/tvCategory3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sport"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:layout_margin="7dp"
        android:layout_below="@id/tvCategory2"
        />
    <CheckBox
        android:id="@+id/cbCategory3"
        android:layout_toRightOf="@id/tvCategory1"
        android:layout_below="@id/tvCategory2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:checked="true"
        android:layout_marginLeft="50dp"
        />
    <TextView
        android:id="@+id/tvCategory4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/geography"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:layout_margin="7dp"
        android:layout_below="@id/tvCategory3"
        />
    <CheckBox
        android:id="@+id/cbCategory4"
        android:layout_toRightOf="@id/tvCategory1"
        android:layout_below="@id/tvCategory3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:checked="true"
        android:layout_marginLeft="50dp"
        />
    <TextView
        android:id="@+id/tvCategory5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movies"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:layout_margin="7dp"
        android:layout_below="@id/tvCategory4"
        />
    <CheckBox
        android:id="@+id/cbCategory5"
        android:layout_toRightOf="@id/tvCategory1"
        android:layout_below="@id/tvCategory4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:checked="true"
        android:layout_marginLeft="50dp"
        />
    <TextView
        android:id="@+id/tvCategory6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/art"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:layout_margin="7dp"
        android:layout_below="@id/tvCategory5"
        />
    <CheckBox
        android:id="@+id/cbCategory6"
        android:layout_toRightOf="@id/tvCategory1"
        android:layout_below="@id/tvCategory5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:checked="true"
        android:layout_marginLeft="50dp"
        android:enabled="true"
        />
    <TextView
        android:id="@+id/tvCategory7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/celebrities"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:layout_margin="7dp"
        android:layout_below="@id/tvCategory6"
        />
    <CheckBox
        android:id="@+id/cbCategory7"
        android:layout_toRightOf="@id/tvCategory1"
        android:layout_below="@id/tvCategory6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:checked="true"
        android:layout_marginLeft="50dp"
        android:enabled="true"
        />
    <TextView
        android:id="@+id/tvCategory8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/music"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:layout_margin="7dp"
        android:layout_below="@id/tvCategory7"
        />
    <CheckBox
        android:id="@+id/cbCategory8"
        android:layout_toRightOf="@id/tvCategory1"
        android:layout_below="@id/tvCategory7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:checked="true"
        android:layout_marginLeft="50dp"
        android:enabled="true"
        />
    <TextView
        android:id="@+id/tvCategory9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/books"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:layout_margin="7dp"
        android:layout_below="@id/tvCategory8"
        />
    <CheckBox
        android:id="@+id/cbCategory9"
        android:layout_toRightOf="@id/tvCategory1"
        android:layout_below="@id/tvCategory8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:checked="true"
        android:layout_marginLeft="50dp"
        android:enabled="true"
        />
    <TextView
        android:id="@+id/tvCategory10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/animals"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:layout_margin="7dp"
        android:layout_below="@id/tvCategory9"
        />
    <CheckBox
        android:id="@+id/cbCategory10"
        android:layout_toRightOf="@id/tvCategory1"
        android:layout_below="@id/tvCategory9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:checked="true"
        android:layout_marginLeft="50dp"
        android:enabled="true"
        />
    <TextView
        android:id="@+id/tvCategory11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/video_games"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:layout_margin="7dp"
        android:layout_below="@id/tvCategory10"
        />
    <CheckBox
        android:id="@+id/cbCategory11"
        android:layout_toRightOf="@id/tvCategory1"
        android:layout_below="@id/tvCategory10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:checked="true"
        android:layout_marginLeft="50dp"
        android:enabled="true"
        />
    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_styles"
        android:text="@string/save"
        android:textSize="20sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="35dp"
        />


</RelativeLayout>